# opus

./: .gitignore  README.md  consumer.py  create_topic.py  customer_event.schema.json  docker-compose.yaml  docker-compose.yml  producer.py  pyproject.toml
.github/workflows/: ci.yml
scripts/: verify_compose.py
src/opus/: cli.py
src/opus/ingest/: __init__.py  constants.py  redis_worker.py
src/opus/market/: constants.py  publisher.py  util.py
src/opus/market/schemas/: market_event.avsc
src/opus/process/batch/: constants.py  spark_job.py
src/opus/process/batch/models/: __init__.py  base.py  simple_lr.py
src/opus/process/batch/schemas/: OHLC_5M.json
src/opus/process/stream/: constants.py  flink_job.py
src/opus/process/stream/metrics/: __init__.py  base.py  ema.py  tumbling_ohlc.py
src/opus/ui/: Opus_UI.py  __init__.py  app.py  constants.py  ingest.py  storage.py  util.py
src/opus/ui/pages/: 2_Company_Profile.py  2_Profile.py  3_Dashboard.py  3_Ticker_Dashboard.py
src/opus/ui/services/: __init__.py  redis_connector.py
tests/ingest/: test_redis_worker.py
tests/market/: test_publisher.py
tests/process/batch/: test_spark_job.py
tests/process/batch/models/: test_simple_lr.py
tests/process/stream/: test_flink_job.py
tests/process/stream/metrics/: test_ema.py  test_metrics.py  test_tumbling_ohlc.py
tests/ui/: test_app.py  test_redis_connector.py
