[project]
name = "campus-cafe-event-pipeline"
version = "1.0.0"
description = "Kafka-based event streaming pipeline for campus cafe events."
authors = [
    { name = "Edward Liu", email = "edwardy.liu@mail.utoronto.ca" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.3.0",
    "certifi>=2026.0.0",
    "requests>=2.32.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100
target-version = ['py312']
